[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roolink"
version = "1.0.1"
description = "Official Roolink SDK for Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["roolink", "akamai", "sensor", "sdk"]
authors = [
    {name = "Roolink"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx[http2]>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/roolinkio/roolink-py"
Documentation = "https://docs.roolink.io"
"Source Code" = "https://github.com/roolinkio/roolink-py"
"Bug Tracker" = "https://github.com/roolinkio/roolink-py/issues"
